# streaming-analytics-platform

./: .env.example  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  event-model.md
infra/clickhouse/init/: 001_init_metrics.sql
infra/grafana/: Dockerfile
infra/grafana/dashboards/: realtime-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: clickhouse.yml
producer/: Dockerfile  requirements.txt
producer/src/: config.py  generator.py  kafka_producer.py  main.py  models.py
scripts/: run_producer.sh
shared/event_contract/: event_schema.json
streaming/: Dockerfile  requirements.txt
streaming/src/: clickhouse_sink.py  config.py  main.py  schemas.py  transformations.py
tests/: conftest.py
tests/producer/: test_config.py  test_generator.py  test_models.py
