[project]
name = "streaming-analytics-platform"
version = "0.1.0"
description = "Real-time streaming analytics platform with Kafka, Spark Structured Streaming, ClickHouse, and Grafana."
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

python_files = [
    "test_*.py"
]

python_classes = [
    "Test*"
]

python_functions = [
    "test_*"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"